--- a/whatsapp/2023_c_links.html
+++ b/whatsapp/2023_c_links.html
@@ -1,12 +1,12 @@
 <html lang="en"><head>
   <meta charset="UTF-8">
   <title>ISPlus Whatsapp Groups</title>
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-  <link href="http://cdn.jsdelivr.net/css-toggle-switch/latest/toggle-switch.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/css-toggle-switch/latest/toggle-switch.css" rel="stylesheet">
   <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="http://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
-  <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
   <style>
   select{
@@ -75,12 +75,12 @@
 
 
 <section id="services" class="container2">
-    <div class="row"><div class="col-md-6"><div class="row"><div class="col-sm-6 caption flex"><a target="_blank" href="https://chat.whatsapp.com/BXJ5DVm5i8o1AD37LB4nMj" title="מערכות מסדי נתונים"><h4>מערכות מסדי נתונים</h4></a><br><a target="_blank" href="https://chat.whatsapp.com/BXJ5DVm5i8o1AD37LB4nMj" title="מערכות מסדי נתונים"><img src="http://is-haifa.com/img/courses/מערכות מסדי נתונים.jpg" class="serv" alt="מערכות מסדי נתונים"></a><p></p></div></div></div></div>
+    <div class="row"><div class="col-md-6"><div class="row"><div class="col-sm-6 caption flex"><a target="_blank" href="https://chat.whatsapp.com/BXJ5DVm5i8o1AD37LB4nMj" title="מערכות מסדי נתונים"><h4>מערכות מסדי נתונים</h4></a><br><a target="_blank" href="https://chat.whatsapp.com/BXJ5DVm5i8o1AD37LB4nMj" title="מערכות מסדי נתונים"><img src="https://is-haifa.com/img/courses/מערכות מסדי נתונים.jpg" class="serv" alt="מערכות מסדי נתונים"></a><p></p></div></div></div></div>
 </section>
 
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="http://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="../script.js"></script>
 
 </body></html>
