--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         <div class="col-md-6">
           <div class="row">
             <div class="col-sm-6 caption flex">
-              <a target="_blank" href="https://docs.google.com/document/d/1cJGYVycnDmeOqQHAGcqBotfpTB2oAVUPclARGVWuDqs/edit?usp=sharing" title="קישורים לקבוצות קורסים">
+              <a target="_blank" href="https://docs.google.com/spreadsheets/d/1_OKtGALHoDFFt79s5tbE7TKoSQcmNNWf/edit?usp=sharing&ouid=101507445053063258496&rtpof=true&sd=true" title="קישורים לקבוצות קורסים">
                 <h4>קישורים לקבוצות קורסים</h4>
               </a>
               <br>
-              <a target="_blank" href="https://docs.google.com/document/d/1cJGYVycnDmeOqQHAGcqBotfpTB2oAVUPclARGVWuDqs/edit?usp=sharing" title="קישורים לקבוצות קורסים">
+              <a target="_blank" href="https://docs.google.com/spreadsheets/d/1_OKtGALHoDFFt79s5tbE7TKoSQcmNNWf/edit?usp=sharing&ouid=101507445053063258496&rtpof=true&sd=true" title="קישורים לקבוצות קורסים">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/640px-WhatsApp.svg.png" class="serv" alt="קישורים לקבוצות">
               </a>
               <p></p>
